[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Buildings/Wall_A_01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Buildings/Wall_A_03.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Buildings/WallLvl1.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.3266, 93.1069 )

[node name="Area2D" type="Area2D"]
collision_mask = 3
script = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -0.7892, -93.7318 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Wall_A_01" type="Sprite" parent="Sprite"]
position = Vector2( -23.0024, -66.3942 )
scale = Vector2( 0.364709, 0.414427 )
texture = ExtResource( 1 )

[node name="Wall_A_03" type="Sprite" parent="Sprite/Wall_A_01"]
position = Vector2( 123.012, 0.295563 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.640335, -93.6572 )
shape = SubResource( 1 )

[node name="BuildTime" type="Timer" parent="."]

[node name="Repair" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="BuildTime" to="." method="_on_BuildTime_timeout"]
[connection signal="timeout" from="Repair" to="." method="_on_Repair_timeout"]
